# DoppelGoner

./: .gitignore  Cargo.toml
DatabaseConnect/1-Prep/: SnowflakeDataShapes.py  SnowflakeDefs.py  requirements.txt
DatabaseConnect/1-Prep/Plan/: hsds-schema.md  lightweight-migration-implementation.md  snowflake_table_samples.md  updated-migration-plan.md
DatabaseConnect/2-DBMigration/: README.md  Supabase_Documentation.md  package-lock.json  package.json  supabase-migration-plan.md  tsconfig.json
DatabaseConnect/2-DBMigration/sqlQueries/: CreateTestSchema.sql  RetrieveDatabaseViews.sql  TestSchemaInfo.sql  test.sql  testTruncateAllTables.sql  truncAllTablesInPublic.sql
DatabaseConnect/2-DBMigration/sqlQueries/backup_public/: countRows.sql
DatabaseConnect/2-DBMigration/sqlQueries/backup_test/: checkForeignKeyConstraints.sql  countRows.sql
DatabaseConnect/2-DBMigration/sqlQueries/functions/: migrate-postgis.sql  pg-clone-schema.sql  what-schemas.sql
DatabaseConnect/2-DBMigration/src/: index.ts
DatabaseConnect/Prep/Plan/: hsds-migration-plan.md
dedupe/: Cargo.toml
dedupe/src/: db.rs  entity_organization.rs  main.rs  models.rs  results.rs
dedupe/src/matching/: address.rs  email.rs  mod.rs  phone.rs  semantic.rs  url.rs
grouping-frontend/: database-tables.md  database_schema.md  package-lock.json  package.json
grouping-frontend/app/: page.tsx
grouping-frontend/app/clusters/: page.tsx
grouping-frontend/lib/db/: prisma.ts  schema.prisma
mapping-frontend/: package-lock.json  package.json  tsconfig.json
mapping-frontend/app/: layout.tsx  page.tsx
mapping-frontend/components/ClusterTools/: ClusterSelector.tsx  ClusterSplitConfirmation.tsx
mapping-frontend/components/EntityDetails/: EntityDetailsCard.tsx
mapping-frontend/components/GraphVisualization/: LinkTooltip.tsx  NodeTooltip.tsx  index.tsx
mapping-frontend/components/TaskDetails/: ActionButtons.tsx  MatchEvidencePanel.tsx  index.tsx
mapping-frontend/components/TaskQueue/: TaskItem.tsx  index.tsx
mapping-frontend/context/: ClusterContext.tsx
mapping_frontend/: package-lock.json  package.json
mapping_frontend/app/: globals.css  layout.tsx  page.tsx
mapping_frontend/components/: ClusterSelector.tsx
mapping_frontend/components/ClusterTools/: ClusterCoherenceChart.tsx  ClusterStatistics.tsx
mapping_frontend/components/ConnectionDetails/: ActionButtons.tsx  EnhancedMatchEvidencePanel.tsx  EntityDetailsCard.tsx  index.tsx
mapping_frontend/components/GraphVisualization/: LinkTooltip.tsx  NodeTooltip.tsx  index.tsx
mapping_frontend/components/layout/: AppHeader.tsx  AppLayout.tsx
mapping_frontend/context/: ClusterContext.tsx
matching_pipeline/: Cargo.toml  README
matching_pipeline/src/: cluster_visualization.rs  config.rs  consolidate_clusters.rs  db.rs  entity_organizations.rs  lib.rs  main.rs  models.rs  results.rs  utils.rs
matching_pipeline/src/matching/: address.rs  email.rs  geospatial.rs  mod.rs  name.rs  phone.rs  url.rs
matching_pipeline/src/matching/geospatial/: core.rs  database.rs  mod.rs  postgis.rs  service_utils.rs
matching_pipeline/src/reinforcement/: confidence_tuner.rs  context_model.rs  feature_extraction.rs  feedback_processor.rs  mod.rs  orchestrator.rs  types.rs
matching_pipeline/src/service_matching/: mod.rs  semantic_geospatial.rs
matching_pipeline/tests/: entity_organizations_tests.rs
organization_embedding/: Cargo.toml
organization_embedding/src/: main.rs
service_embedding/inference-worker/: Cargo.toml
service_embedding/inference-worker-metal/: Cargo.toml  Dockerfile  README  docker-compose.yml
service_embedding/inference-worker-metal/benches/: batch_processing_benchmark.rs
service_embedding/inference-worker-metal/src/: config.rs  lib.rs  main.rs
service_embedding/inference-worker-metal/src/inference/: mod.rs  model.rs
service_embedding/inference-worker-metal/src/telemetry/: mod.rs
service_embedding/inference-worker-metal/src/types/: types.rs
service_embedding/inference-worker-metal/tests/: api_integration_tests.rs  model_tests.rs
service_embedding/inference-worker-nvidia/: Cargo.toml  Dockerfile  README  load_test.py  test_inference_worker.sh
service_embedding/inference-worker-nvidia/src/: config.rs  main.rs
service_embedding/inference-worker-nvidia/tests/: api_integration_tests.rs  batch_optimizer_tests.rs  cuda_inference_tests.rs  inference_engine.rs  model_tests.rs
service_embedding/inference-worker/src/: main.rs
service_embedding/inference-worker/tests/: api_integration_tests.rs  batch_optimizer_tests.rs  inference_engine.rs
service_embedding/orchestrator/: Cargo.toml  Dockerfile  README  docker-compose.yml
service_embedding/orchestrator/.sqlx/: query-01ae6b8c2bd5120bfaf41a0b882845c762d4e36cd914fabee05b9df97b52e36e.json  query-20dd80517257d02b65219026a4f5178d25c301dc6c4619b4d9cdf40f5caf4c83.json  query-326f903c5944be252d2d8a52d766648f40a4115cfca76d331797f2631ea62996.json  query-8063fb99c3483c56700daad2611e680392b5d09acaacbdcffaf81b79a54558b5.json  query-ba2bdfdf68aa762297fd709b62c7f2e5bbb1c40fe96cf8e7ef2600b83fd69678.json  query-d33c3b75becea0b45251df0d59590a53ccccb15bd5a0e2da9095d72a2cc90412.json
service_embedding/orchestrator/src/: lib.rs  main.rs
service_embedding/orchestrator/src/api/: handlers.rs  mod.rs  response.rs
service_embedding/orchestrator/src/client/: mod.rs  worker.rs
service_embedding/orchestrator/src/db/: mod.rs  queries.rs
service_embedding/orchestrator/src/discovery/: mod.rs
service_embedding/orchestrator/src/orchestrator/: mod.rs  service.rs  stats.rs  worker_manager.rs
service_embedding/orchestrator/src/tokenizer/: mod.rs  service.rs
service_embedding/orchestrator/src/types/: types.rs
service_embedding/orchestrator/tests/: db_tests.rs  integration_tests.rs  tokenizer_tests.rs
src/: entity_organizations.rs  lib.rs  main.rs  models.rs  results.rs
src/matching/: email.rs  url.rs
src/matching/geospatial/: config.rs  utils.rs
src/services/: config.rs  data_fetcher.rs  data_writer.rs  embed_services.rs  inference.rs  match_services.rs  mod.rs  tokenizer.rs  types.rs
(+83 files in other folders)
