[package]
name = "dedupe"
version = "0.1.0"
edition = "2021"
description = "Entity resolution pipeline for HSDS data"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Database
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# URL parsing
url = "2.4"

# Phone number handling
phonenumber = "0.3"

# UUID Gendx
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Floating Point handling
rust_decimal = { version = "1.28", features = ["tokio-postgres"] }

# Assist async database with utils
futures = "0.3"

# Optional: for geospatial calculations (alternative to the Haversine function we implemented)
geo = "0.25"

# Optional: for text processing and normalization
unicode-normalization = "0.1"

# Optional: for fuzzy string matching (will be used in semantic matching)
strsim = "0.10"