[package]
name = "dedupe"
version = "0.1.0"
edition = "2024"
authors = ["David Botos"]
description = "A deduplication system for HSDS"

[dependencies]
# Error handling
anyhow = "1.0.98"

# Logging
log = "0.4.27"
env_logger = "0.11.3"

# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# UUID generation
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Random number generation
rand = { version = "0.8", features = ["std", "std_rng"] }

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
deadpool-postgres = "0.10.5"
postgres-types = { version = "0.2.9", features = ["derive"] }

# Async utilities
futures = "0.3.30"
bytes = "1.10.1"

# URL handling
url = "2.5.4"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Machine Learning
smartcore = { version = "0.3.2", features = ["serde"] }  # Replaces lightgbm
ndarray = "0.15.6"   # Array manipulation
linfa = "0.6.1"      # Potential utility functions

# Reconciling storage types
pgvector = { version = "0.4", features = ["postgres"] }

# Graph algorithms
petgraph = "0.6.5"

# For string similarity calculations
strsim = "0.10.0"

# For regular expressions in name normalization
regex = "1.7.0"

# Define multiple binary targets
[[bin]]
name = "dedupe"
path = "src/main.rs"

[lib]
name = "dedupe_lib"
path = "src/lib.rs"