[package]
name = "organization_embedding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
candle-core = { version = "0.8.4", features = ["metal", "accelerate"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4" }
tokenizers = "0.13.4"
tokio = { version = "1.44", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "0.8"
bb8-postgres = "0.8"
pgvector = { version = "0.4", features = ["postgres"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"