[package]
name = "inference_worker"
version = "0.1.0"
edition = "2021"
authors = ["David Botos"]
description = "Inference worker for distributed embedding pipeline"

[dependencies]
# Web framework and server
axum = { version = "0.6", features = ["headers", "multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "timeout", "cors", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "time", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
num_cpus = "1.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# ML dependencies
candle-core = { version = "0.9.0" }
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
tokenizers = "0.13.4"
safetensors = "0.3.1"

# Testing and Benchmarking
[dev-dependencies]
tokio-test="0.4"
criterion="0.4"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

# Features configuration
[features]
default = ["accelerate"]  # Changed from "metal" to "accelerate"
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]  # Removed accelerate from here
accelerate = ["candle-core/accelerate"]  # Added separate accelerate feature

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false