[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core async runtime
tokio = { version = "1.29", features = ["full"] }

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time", "chrono"] }

# Serialization & deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"

# Utility
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
backoff = "0.4"
rand = "0.8"
async-trait = "0.1"
regex = "1.8"
lazy_static = "1.4"

# Metrics & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.19"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Tokenizer
tokenizers = "0.14"

# Configuration
config = "0.13"
dotenv = "0.15"